# pico-playground

./: .gitignore  .gitmodules  README.md
00_pico_freertos/: CMakeLists.txt  README.md
pico_i2c/: CMakeLists.txt  README.md
pico_i2c/src/: i2c_main.c
pico_multicore/: CMakeLists.txt  README.md
pico_multicore/src/: random_multicore.cpp  simple_multicore.cpp
pico_sample/: CMakeLists.txt  README.md  main.cpp
pico_spi/: CMakeLists.txt  README.md
pico_spi/docs/: gpt_question_regarding_sh1106.txt  lame_bitmap.txt  notes.txt  roadmap.txt  sample.txt  tracing_of_my_program.txt  tracing_sh1106_startup_for_adafruit.txt
pico_spi/include/: SH1106_Commands.h  SH1106_Interactions.h  c_Adafruit_SH1106.h  lame_bitmap.h
pico_spi/scripts/: generate_bit_map_header.py
pico_spi/src/: Adafruit_SH1106.c  SH1106_Interactions.c  spi_main.c
pico_spi_2/: CMakeLists.txt  README.md
pico_spi_2/docs/: u8g2_setup.txt
pico_spi_2/include/: SH1106_Commands.h  SH1106_Interactions.h
pico_spi_2/src/: SH1106_Interactions.c  spi_main.c
pico_swd_debug/: CMakeLists.txt  README.md  main.cpp  raspberrypi-swd.cfg
pico_u8g2/: README.md
pico_u8g2/include/: SH1106_Interactions.h
pico_usb_serial/: CMakeLists.txt  README.md  main.cpp
pico_usb_serial/src/: usb_input.c  usb_input_lvl2.c
